
= rufus-jig CHANGELOG.txt


== rufus-jig - 0.1.20    released 2010/06/22

- URI.parse(x) can't do UTF-8, so working around...


== rufus-jig - 0.1.19    released 2010/05/14

- couch #nuke_design_documents to clean out [old/all] views


== rufus-jig - 0.1.18    released 2010/05/10

- couch #on_change to track continuous changes in a CouchDB databases


== rufus-jig - 0.1.17    released 2010/03/21

- using a new Patron::Session for each request (yes, they seem GC friendly)
- Rufus::Jig::Couch #path and #name methods


== rufus-jig - 0.1.16    released 2010/03/17

- Rufus::Jig::Couch returns true (was nil) when trying to put into a missing db


== rufus-jig - 0.1.15    released 2010/03/11

- unified :timeout => sec option and Rufus::Jig::TimeoutError
- fixed small issue with em-http-request and '/' path
- Ruote::Couch.new now passes options when doing Rufus::Jig::Http


== rufus-jig - 0.1.14    released 2010/02/25

- temporary fallback to net/http for Couch#attach and patron
- implemented Rufus::Jig::Couch#attach and #detach
  warning : Patron as of 0.4.5 is not OK with PUTting attachments


== rufus-jig - 0.1.13    released 2010/02/12

- implemented Rufus::Jig::Couch#post


== rufus-jig - 0.1.12    released 2010/01/13

- fixed bug with Couch and delete('missing')


== rufus-jig - 0.1.11    released 2010/01/11

- couch : shortened time between put { delete if re_put_ok == false; put }


== rufus-jig - 0.1.10    released 2010/01/06

- test/con to test/conc (win issue), thanks gauched
- made net/http Http thread-safe (serialization through synchronization)
- :re_put_ok => false rework (deleting at first)


== rufus-jig - 0.1.9    released 2009/12/29

- Couch now handling conflict re-get by itself
- :re_put_ok => false option for Rufus::Jig::Couch
  (refusing puts on deleted documents)


== rufus-jig - 0.1.8    released 2009/12/25

- using rufus-json


== rufus-jig - 0.1.7    released 2009/12/23
