@@ -2,6 +2,11 @@
 = rufus-jig CHANGELOG.txt
 
 
+== rufus-jig - 0.1.21    not yet released
+
+- caching is only for GET !
+
+
 == rufus-jig - 0.1.20    released 2010/06/22
 
 - URI.parse(x) can't do UTF-8, so working around...
